[project]
name = "Backend"
version = "0.1.0"
description = "PDM package"
authors = [
    {name = "LLMR_Boringtao", email = "138439682+LLMR-boringtao@users.noreply.github.com"},
]
dependencies = [
    "quart>=0.19.4",
    "pytest>=7.4.4",
    "outcome>=1.3.0.post0",
    "greenlet>=3.0.3",
    "twisted>=23.10.0",
    "pytest-asyncio>=0.23.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = {cmd = "quart --app src/backend/run.py run --port 5050", env_file = "development.env"}
test = {composite = ["pytest tests/"], env_file = "testing.env"}