[project]
name = "Backend"
version = "0.1.0"
description = "CodeMatrix Backend"
authors = [
    {name = "LLMR_Boringtao", email = "LLMR-boringtao@users.noreply.github.com"},
]
dependencies = [
    "quart>=0.19.4",
    "pytest>=7.4.4",
    "outcome>=1.3.0.post0",
    "greenlet>=3.0.3",
    "twisted>=23.10.0",
    "pytest-asyncio>=0.23.3",
    "quart-auth>=0.9.0",
    "bcrypt>=4.1.2",
    "zxcvbn>=4.4.28",
    "itsdangerous>=2.1.2",
    "quart-rate-limiter>=0.9.0",
    "pydantic[email]>=2.5.3",
    "quart-schema>=0.18.0",
    "quart-db>=0.7.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = {cmd = "quart --app run.py run --port 5050", env_file = "development.env"}
test = {composite = ["pytest tests/"], env_file = "testing.env"}
recreate-db = {cmd = "quart --app run.py run recreate_db", env_file = "development.env"}
recreate-db-test = {composite = ["quart --app run.py run recreate_db", "pytest tests/"], env_file = "testing.env"}

[tool.pdm.dev-dependencies]
dev = [
    "freezegun>=1.4.0",
]
