[project]
name = "Backend"
version = "0.1.0"
description = "CodeMatrix Backend"
authors = [
    {name = "LLMR_Boringtao", email = "LLMR-boringtao@users.noreply.github.com"},
]
dependencies = [
    "quart>=0.18.0",
    "quart-auth>=0.7.0",
    "bcrypt>=3.2.2",
    "zxcvbn>=4.4.28",
    "itsdangerous>=2.1.2",
    "quart-rate-limiter>=0.7.0",
    "pydantic[email]>=1.9.1",
    "quart-schema>=0.12.0",
    "quart-db>=0.2.0",
    "httpx>=0.23.0",
    "disposable-email-domains>=0.0.79",
    "pyotp>=2.6.0",
    "pydantic-core==2.14.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "mypy>=0.971",
    "flake8>=4.0.1",
    "bandit>=1.7.4",
    "vulture>=2.5",
    "pytest>=7.1.2",
    "pytest-asyncio>=0.19.0",
    "djhtml>=1.5.2",
    "setuptools>=63.2.0",
    "freezegun>=1.2.1",
    "pip-audit>=2.4.2",
]

[tool.pdm.scripts]
start = {cmd = "quart --app run.py run --port 5050", env_file = "development.env"}
test = {composite = ["pytest tests/"], env_file = "testing.env"}
recreate-db = {cmd = "quart --app run.py recreate_db", env_file = "development.env"}
recreate-db-test = {composite = ["quart --app run.py recreate_db", "pytest tests/"], env_file = "testing.env"}
